[Android] Synthetic composition event should have DomKey 'Unidentified'

Produce DomKey::UNIDENTIFIED if |keycode| is COMPOSITION_KEY_CODE (229)
and have no valid |dom_code| or |unicode_character|. (Came from IME
|setComposingText()|.)

One concern is 229 overlaps with AKEYCODE_LAST_CHANNEL, but this should
be fine because it should have a proper |dom_code| if it comes from
hardware keyboard.

BUG=595329

Review URL: https://codereview.chromium.org/1811553002

Cr-Commit-Position: refs/heads/master@{#381952}

Former-commit-id: 0e8c9a231127cb3538d6ebd5c4a614e6b3226109